--- a/src/index.html
+++ b/src/index.html
@@ -49,11 +49,12 @@
       src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
-    <script type="text/javascript" src="./slider.js">
+    <script type="text/javascript" src="./js/slider.js">
     </script>
-  </body>  
-    <script src="./menu.js"></script>
+  <!-- </body>   -->
     <script src="./index.js"></script>
+    <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/modal2.js"></script>
   </body>
 </html>
