--- a/src/index.html
+++ b/src/index.html
@@ -1,71 +1,69 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"/>
-      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-    <title>Hell EN</title>
-  </head>
-  <body>
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/advantages.html"></include>
-    <include src="./partials/benefits.html"></include>
-    <include src="./partials/description.html"></include>
-    <include src="./partials/programme-reasons.html"></include>
-    <include src='./partials/teacher.html'></include>
-    <include src='./partials/guarantees.html'></include>
-    <include src='./partials/reviews.html'></include>
-    <include src="./partials/form.html"></include>
-    <include src="./partials/footer.html"></include>
-    
 
-    <script src="./menu.js"></script>
-    <script src="./index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js"
-      integrity="sha256-Ap4KLoCf1rXb52q+i3p0k2vjBsmownyBTE1EqlRiMwA=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('.one-item').slick({
-          slidesToShow: 1,
-          slidesToScroll: 1,
-          fade: true,
-          asNavFor: '.multiple-items',
-        });
-        $('.multiple-items').slick({
-          slidesToShow: 7,
-          slidesToScroll: 1,
-          asNavFor: '.one-item',
-          dots: false,
-          focusOnSelect: true,
-          autoplay: true,
-          arrows:true,
-          responsive: [
-            {
-              breakpoint: 768,
-              settings: {
-                slidesToShow: 3,
-                slidesToScroll: 1
-              }
-            }
-          ]
-        });
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+  <title>Hell EN</title>
+</head>
+
+<body>
+  <include src="./partials/header.html"></include>
+  <include src="./partials/hero.html"></include>
+  <include src="./partials/advantages.html"></include>
+  <include src="./partials/benefits.html"></include>
+  <include src="./partials/description.html"></include>
+  <include src="./partials/programme-reasons.html"></include>
+  <include src='./partials/teacher.html'></include>
+  <include src='./partials/guarantees.html'></include>
+  <include src='./partials/reviews.html'></include>
+  <include src="./partials/form.html"></include>
+  <include src="./partials/footer.html"></include>
+
+
+  <script src="./menu.js"></script>
+  <script src="./index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js"
+    integrity="sha256-Ap4KLoCf1rXb52q+i3p0k2vjBsmownyBTE1EqlRiMwA=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $('.one-item').slick({
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        fade: true,
+        asNavFor: '.slider-dots',
       });
-    </script>
-  </body>
+      $('.slider-dots').slick({
+        slidesToShow: 5,
+        slidesToScroll: 1,
+        asNavFor: '.one-item',
+        dots: false,
+        focusOnSelect: true,
+        autoplay: true,
+        arrows: true,
+        responsive: [
+          {
+            breakpoint: 768,
+            settings: {
+              slidesToShow: 3,
+              slidesToScroll: 1
+            }
+          }
+        ]
+      });
+    });
+  </script>
+</body>
+
 </html>
