Подключеает иконку сайта favicon для разных устройств

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,15 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title lang="en">Helen</title>
+  <title lang="en">HellEN</title>
+  <!-- Подключение иконки FAVICON -->
+  <link rel="apple-touch-icon" sizes="180x180" href="icon/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icon/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icon/favicons/favicon-16x16.png">
+  <link rel="manifest" href="icon/favicons/site.webmanifest">
+  <link rel="mask-icon" href="icon/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="theme-color" content="#cfcfcf">
   <!-- <link rel="stylesheet" href="../src/modern-normalize.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
