Добавила стрелку возврата вверх

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,36 @@
     
     <header>
       <include src="./partials/page-header.html"></include>
+
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
+<script type="text/javascript">
+
+$(function() {
+
+ $(window).scroll(function() {
+
+ if($(this).scrollTop() != 0) {
+
+ $('#toTop').fadeIn();
+ 
+ } else {
+
+ $('#toTop').fadeOut();
+
+ }
+
+ });
+ 
+ $('#toTop').click(function() {
+
+ $('body,html').animate({scrollTop:0},800);
+
+ });
+ 
+});
+
+</script>
     </header>
     
     <main>
@@ -63,5 +93,7 @@
     <script>
       new WOW().init();
     </script>
+
+<DIV ID = "toTop" > 🡹 </ DIV >
   </body>
 </html>
