Эксперименты с полосой прокрутки во время вызова бэкдропа.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" data-body>
   
   <head>
     <meta charset="UTF-8" />
@@ -21,7 +21,7 @@
 
   </head>
 
-  <body class="body" data-body>
+  <body class="body">
     
     <header>
       <include src="./partials/page-header.html"></include>
@@ -94,6 +94,6 @@ $(function() {
       new WOW().init();
     </script>
 
-<DIV ID = "toTop" > 🡹 </ DIV >
+<DIV ID = "toTop" > 🡹 </DIV >
   </body>
 </html>
