--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,17 @@
     />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-
     <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/price.html"></include>
-    <include src="./partials/advantages.html"></include>
-    <include src="./partials/team.html"></include>
-    <include src="./partials/works.html"></include>
-    <include src="./partials/contacts.html"></include>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/price.html"></include>
+      <include src="./partials/advantages.html"></include>
+      <include src="./partials/team.html"></include>
+      <include src="./partials/works.html"></include>
+      <include src="./partials/contacts.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
 </html>
