Добавляет скрипт для модалки и моб. меню + hero + спрайт картинки

--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,7 @@
       });
     </script>
     <script src="./index.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
