Фиксит кубик на кнопке, JS

--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,11 @@
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer-contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal-window.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script
-      src="//code.jquery.com/jquery-1.11.0.min.js"
-    ></script>
-    <script
-      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
-    ></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
       integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
