--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <body>
     <include src="./partials/header.html"></include>
     <main>
+      <include src="./partials/modal.html"></include>
       <include src="./partials/hero.html"></include>
       <include src="./partials/about.html"></include>
       <include src="./partials/price.html"></include>
