--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,9 @@
       $(document).ready(function () {
         $('.slick-slider').slick({
           dots: true,
+          infinite: true,
+          slidesToShow: 1,
+          slidesToScroll: 1,
         });
       });
     </script>
