--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>IceCream</title>
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/page-header.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <include src="./partials/products-section.html"></include>
+
+    <include src="./partials/mading-section.html"></include>
+
+    <include src="./partials/reviews-section.html"></include>
+
+    <include src="./partials/page-footer.html"></include>
+
+    <!-- Скрипт  -->
     <script src="./index.js"></script>
   </body>
 </html>
