--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <title>Заголовок страницы</title>
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <!-- Секция №3 -->
+    <include src="./partials/products.html"></include>
+    <include src="./partials/about.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
