--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Заголовок страницы</title>
   </head>
   <body>
+    sgdlmv
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
