--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,21 @@
     <title>IceCream</title>
   </head>
   <body>
-    <include src="./partials/page-header.html"></include>
+    <include src="./partials/hero-header.html"></include>
 
-    <include src="./partials/products-section.html"></include>
+    <include src="./partials/products.html"></include>
 
-    <include src="./partials/mading-section.html"></include>
+    <include src="./partials/about.html"></include>
 
-    <include src="./partials/reviews-section.html"></include>
+    <include src="./partials/advantages.html"></include>
 
-    <include src="./partials/page-footer.html"></include>
+    <include src="./partials/gallery.html"></include>
+
+    <include src="./partials/customer-reviews.html"></include>
+
+    <include src="./partials/contacts.html"></include>
+
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипт  -->
     <script src="./index.js"></script>
