--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/title.html"></include>
     <include src="./partials/buttons.html"></include>
     <include src="./partials/TOLIK_TOLIK.html"></include>
 
