--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файv vcvл. -->
     <script src="./index.js"></script>
   </body>
 </html>
