--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     
-
+  <include src="./partials/product.html"></include>
   <include src="./partials/footer.html"></include>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
