немного разметки исправил

--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок страницы</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-<<<<<<< Updated upstream
-    <include src="./partials/example.html"></include>
-    <include src="./partials/page-header.html"></include>
-=======
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/hero.html"></include>
->>>>>>> Stashed changes
     <include src="./partials/salespoints.html"></include>
 
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
-  </body>
+</body>
+
 </html>
