--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
     <title>Заголовок страницы</title>
   </head>
   <body>
-    <include src="./partials/header.html"></include>
     <main>
-      <include src="./partials/hero.html"></include>
+      <include src="./partials/header_hero.html"></include>
       <include src="./partials/products.html"></include>
       <include src="./partials/about.html"></include>
       <include src="./partials/advantages.html"></include>
