Добавлен скрипт на модалку php

--- a/src/index.html
+++ b/src/index.html
@@ -58,5 +58,7 @@
     <script src="./index.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
+    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="ajax.js"></script> -->
   </body>
 </html>
