--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
     <include src="./partials/title.html"></include>
+
+    <include src="./partials/products.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файv vcvл. -->
     <script src="./index.js"></script>
   </body>
