--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/cheestick.html"></include>
+    
     <include src="./partials/example.html"></include>
+    <include src="./partials/tests.html"></include>
+    <include src="./partials/cheestick.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
