--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
       crossorigin="anonymous"
     />
+    
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
@@ -44,16 +45,7 @@
       integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
       crossorigin="anonymous"
     ></script>
-    <script>
-      $(document).ready(function () {
-        $('.slick-slider').slick({
-          dots: true,
-          infinite: true,
-          slidesToShow: 1,
-          slidesToScroll: 1,
-        });
-      });
-    </script>
+    <script src="./js/slick-slider.js"></script>
     <script src="./index.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
