--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,13 @@
       <include src="./partials/contacts.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"
+    ></script>
+    <script src="./js/ajax.js"></script>
     <script src="./js/modal.js"></script>
-    <script src="./index.js"></script>
     <script src="./main.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
