--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>IceCream</title>
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-    <include src="./partials/products.html"></include>
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/section-hero.html"></include>
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл.-->
+    Hello world
+    <!-- <include src="./partials/example.html"></include> -->
+
     <script src="./index.js"></script>
   </body>
 </html>
