--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,14 @@
     <title>IceCream</title>
   </head>
   <body>
-    Hello world
-    <!-- <include src="./partials/example.html"></include> -->
-
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/about.html"></include>
+    <include src="./partials/advantages.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/customer.html"></include>
+    <include src="./partials/contacts.html"></include>
+    <include src="./partials/footer.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
