анимировали бургер и лого

--- a/src/index.html
+++ b/src/index.html
@@ -35,5 +35,6 @@
     <script src="./js/modal.js"></script>
     <script src="./main.js"></script>
     <script src="./index.js"></script>
+    <script src="./menu.js"></script>
   </body>
 </html>
