--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,41 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
   </head>
   <body>
+    <header>
+      <div class="container">
+        <nav>
+<!-- Лого -->
+          <a class="logo" href="./index.html">
+            <svg>
+              <use href=""></use>
+            </svg>
+          </a>
+<!-- Кнопка выпадающего меню -->
+          <button> 
+            <svg>
+              <use href=""></use>
+              <use href=""></use>
+            </svg>
+          </button>
+<!-- Секция навигации -->
+          <div>
+            <a href="">Home</a>
+            <a href="">About us</a>
+            <a href="">How it’s made?</a>
+            <a href="">Our products</a>
+            <a href="">Contact</a>
+          </div>
+<!-- Кнопка купить -->
+          <div>
+            <button type="button">Buy now
+              <svg>
+                <use href=""></use>
+              </svg>
+            </button>
+          </div>
+        </nav>
+      </div>
+    </header>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     
     <include src="./partials/example.html"></include>
