--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <body>
     
   <include src="./partials/product.html"></include>
+  <include src="./partials/customer-reviews.html"></include>
   <include src="./partials/footer.html"></include>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
