Добавляет разметку и стили блоку reviews

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     
     <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
+    <include src="./partials/reviews.html"></include>
     <include src="./partials/contacts.html"></include>
 
 
