--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     <include src="./partials/footer.html"></include>
     
     
-
+<script src="./js/btn-to-top.js"></script>
   <script src="./js/modal.js"></script>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./burger-menu.js"></script>
