хедер + мобильное меню

--- a/src/index.html
+++ b/src/index.html
@@ -48,5 +48,8 @@
     <script src="./js/script.js"></script>
     <script src="./js/animation.js"></script>
     <script src="./index.js"></script>
+
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
