добавил стили на таблет

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
-    <header>
+    <header class="page-header">
       <include src="./partials/page-header.html"></include>
     </header>
     <main>
