--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/customer-reviews.html"></include>
-    <include src="./partials/contacts.html"></include> -->
+    <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
 
     <script src="./index.js"></script>
