--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,6 @@
     <include src="./partials/about-modal.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <script src="./modal.js"></script>
   </body>
 </html>
