--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,14 @@
   <body>
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
-    <!-- <include src="./partials/products.html"></include>
+    <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/customer-reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
-    <include src="./partials/button-up.html"></include> -->
+    <include src="./partials/button-up.html"></include>
 
     <script src="./index.js"></script>
     <script src="./js/modal.js"></script>
