Добавляет разметку по макету

--- a/src/index.html
+++ b/src/index.html
@@ -22,5 +22,7 @@
     <include src="./partials/up-button.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <script src="./js/mobile-menu.js"></script>
+
   </body>
 </html>
