подключены анкетные модалки

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
     <include src="./partials/modal1.html"></include>
     <include src="./partials/modal2.html"></include>
     <include src="./partials/modal3.html"></include>
+    <include src="./partials/modal4.html"></include>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
