--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,16 @@
       <include src="./partials/footer.html"></include>
     </footer>
    
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+    
     <script src="./js/menu.js"></script>
+    <!-- Библиотека jQuery для слайдера Slick -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- Слайдер Slick  -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- Настройка слайдера Slick  -->
+    <script src="./js/script.js"></script>
+<!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+<script src="./index.js"></script>
   </body>
   
 </html>
