Добавляет модальное окно в about

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./js/menu.js"></script>
     <script src="./index.js"></script>
+    
+    <!-- SCRIPT FOR MODAL WINDOW -->
+    <script src="./js/modal.js"></script>  
 
   </body>
   
