--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,12 @@
     <include src="./partials/reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
-    <!-- <include src="./partials/modal-buy-now.html"></include> -->
+    <include src="./partials/modal-buy-now.html"></include>
     <include src="./partials/about-modal.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <script src="./menu-header.js"></script>
     <script src="./modal.js"></script>
+    <script src="./modal-about.js"></script>
   </body>
 </html>
