--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
-    <include src="./partials/products.html"></include>
+    <!-- <include src="./partials/products.html"></include> -->
     <include src="./partials/production.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
