--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./menu-header.js"></script>
+    <script src="./menu-buy.js"></script>
     <script src="./modal.js"></script>
     <script src="./modal-about.js"></script>
   </body>
