created mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,8 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+
+    <!-- burger  -->
     <script>
       const btn = document.getElementById("menu-toggle");
         const lines = btn.querySelectorAll(".line");
@@ -76,6 +78,24 @@
           btn.classList.add(btnClass);
         });
     </script>
-    
+
+    <!-- Mobile menu  -->
+    <script>
+      (() => {
+          const menuBtnRef = document.querySelector('[data-menu-button]');
+          const mobileMenuRef = document.querySelector('[data-menu]');
+
+          menuBtnRef.addEventListener('click', () => {
+            const expanded =
+              menuBtnRef.getAttribute('aria-expanded') === 'true' || false;
+
+            menuBtnRef.classList.toggle('is-open');
+            menuBtnRef.setAttribute('aria-expanded', !expanded);
+
+            mobileMenuRef.classList.toggle('is-open');
+          });
+        })();
+    </script>
+
   </body>
 </html>
