--- a/src/index.html
+++ b/src/index.html
@@ -98,22 +98,22 @@
     </script>
 
     <script>
-      const btn = document.getElementById("menu-toggle");
+      const btnmn = document.getElementById("menu-toggle");
       const lines = btn.querySelectorAll(".line");
       const cls = { open: "open", close: "close" };
       let btnClass = cls.open;
 
-      btn.addEventListener("click", () => {
-        if (btn.classList.contains(cls.open)) {
-          btn.classList.remove(btnClass);
+      btnmn.addEventListener("click", () => {
+        if (btnmn.classList.contains(cls.open)) {
+          btnmn.classList.remove(btnClass);
           btnClass = cls.close;
-        } else if (btn.classList.contains(cls.close)) {
-          btn.classList.remove(btnClass);
+        } else if (btnmn.classList.contains(cls.close)) {
+          btnmn.classList.remove(btnClass);
           btnClass = cls.open;
         }
 
-        void btn.offsetWidth;
-        btn.classList.add(btnClass);
+        void btnmn.offsetWidth;
+        btnmn.classList.add(btnClass);
       });
     </script>
     <script>(() => {
