--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
 
     <script>
       const btnmn = document.getElementById("menu-toggle");
-      const lines = btn.querySelectorAll(".line");
+      const lines = btnmn.querySelectorAll(".line");
       const cls = { open: "open", close: "close" };
       let btnClass = cls.open;
 
