--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice cream</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <!-- Hero and header section -->
@@ -60,63 +68,64 @@
 
     <!-- burger  -->
     <script>
-      const btn = document.getElementById("menu-toggle");
-        const lines = btn.querySelectorAll(".line");
-        const cls = { open: "open", close: "close" };
-        let btnClass = cls.open;
+      const btn = document.getElementById('menu-toggle');
+      const lines = btn.querySelectorAll('.line');
+      const cls = { open: 'open', close: 'close' };
+      let btnClass = cls.open;
 
-        btn.addEventListener("click", () => {
-          if (btn.classList.contains(cls.open)) {
-            btn.classList.remove(btnClass);
-            btnClass = cls.close;
-          } else if (btn.classList.contains(cls.close)) {
-            btn.classList.remove(btnClass);
-            btnClass = cls.open;
-          }
+      btn.addEventListener('click', () => {
+        if (btn.classList.contains(cls.open)) {
+          btn.classList.remove(btnClass);
+          btnClass = cls.close;
+        } else if (btn.classList.contains(cls.close)) {
+          btn.classList.remove(btnClass);
+          btnClass = cls.open;
+        }
 
-          void btn.offsetWidth;
-          btn.classList.add(btnClass);
-        });
+        void btn.offsetWidth;
+        btn.classList.add(btnClass);
+      });
     </script>
 
     <!-- Mobile menu  -->
     <script>
       (() => {
-          const menuBtnRef = document.querySelector('[data-menu-button]');
-          const mobileMenuRef = document.querySelector('[data-menu]');
+        const menuBtnRef = document.querySelector('[data-menu-button]');
+        const mobileMenuRef = document.querySelector('[data-menu]');
 
-          menuBtnRef.addEventListener('click', () => {
-            const expanded =
-              menuBtnRef.getAttribute('aria-expanded') === 'true' || false;
+        menuBtnRef.addEventListener('click', () => {
+          const expanded =
+            menuBtnRef.getAttribute('aria-expanded') === 'true' || false;
 
-            menuBtnRef.classList.toggle('is-open');
-            menuBtnRef.setAttribute('aria-expanded', !expanded);
+          menuBtnRef.classList.toggle('is-open');
+          menuBtnRef.setAttribute('aria-expanded', !expanded);
 
-            mobileMenuRef.classList.toggle('is-open');
-          });
-        })();
+          mobileMenuRef.classList.toggle('is-open');
+        });
+      })();
     </script>
 
     <script>
-      const btnmn = document.getElementById("menu-toggle");
-      const line = btnmn.querySelectorAll(".line");
-      const cls = { open: "open", close: "close" };
-      let btnClass = cls.open;
+      const btnmn = document.getElementById('menu-toggle');
+      const line = btnmn.querySelectorAll('.line');
+      const cl = { open: 'open', close: 'close' };
+      let btnClasses = cl.open;
 
-      btnmn.addEventListener("click", () => {
-        if (btnmn.classList.contains(cls.open)) {
-          btnmn.classList.remove(btnClass);
-          btnClass = cls.close;
-        } else if (btnmn.classList.contains(cls.close)) {
-          btnmn.classList.remove(btnClass);
-          btnClass = cls.open;
+      btnmn.addEventListener('click', () => {
+        if (btnmn.classList.contains(cl.open)) {
+          btnmn.classList.remove(btnClasses);
+          btnClasses = cl.close;
+        } else if (btnmn.classList.contains(cl.close)) {
+          btnmn.classList.remove(btnClasses);
+          btnClasses = cl.open;
         }
 
         void btnmn.offsetWidth;
-        btnmn.classList.add(btnClass);
+        btnmn.classList.add(btnClasses);
       });
     </script>
-    <script>(() => {
+    <script>
+      (() => {
         const refs = {
           openModalBtn: document.querySelector('[data-modal-open]'),
           closeModalBtn: document.querySelector('[data-modal-close]'),
@@ -129,11 +138,7 @@
         function toggleModal() {
           refs.modal.classList.toggle('is-hidden');
         }
-
       })();
     </script>
-
   </body>
-
 </html>
-
