--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,22 @@
 
   <script src="./js/mobile-menu.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Подключает библиотеку slick -->
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script>
+      $(document).ready(function(){
+          $('.rewiew-card').slick({
+            arrows:false,
+            dots:true,
+            dotsClass: "my-dots",
+          });
+      });
+    </script>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
