исправление паддингов контейнера + добавление фавикона

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,17 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
+
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#d41443">
+    <meta name="msapplication-TileColor" content="#ff0000">
+    <meta name="theme-color" content="#fff5f6">
+    
+
     <!-- Подключение анимации -->
     <link
       rel="stylesheet"
