Скрипт для Никиты закоментирован

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+
+    <!-- <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    // Add the new slick-theme.css if you want the default styling
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" /> -->
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
@@ -39,7 +42,7 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <!-- наши скрипты -->
-    <script
+    <!-- <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
     ></script>
@@ -48,12 +51,11 @@
       src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
     ></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
+
     <script type="text/javascript">
-      $(document).ready(function(){
-        $('.customer-reviews__wrappers').slick({
-          setting-name: setting-value
-        });
+      $(document).ready(function () {
+        $('.customer-reviews__wrappers').slick({});
       });
-    </script>
+    </script> -->
   </body>
 </html>
