--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,19 @@
     />
   </head>
   <body class="global">
-  <include src="./partials/header.html"></include>
+  <!-- <include src="./partials/header.html"></include>
   <include src="./partials/hero.html"></include>
 
-  <include src="./partials/products.html"></include>
+  <include src="./partials/products.html"></include> -->
 
   <include src="./partials/about.html"></include>
 
   <include src="./partials/advantages.html"></include>
-  <include src="./partials/reviews.html"></include>
+  <!-- <include src="./partials/reviews.html"></include>
 
   <include src="./partials/contacts.html"></include>
 
-  <include src="./partials/footer.html"></include>
+  <include src="./partials/footer.html"></include> -->
 
   <script src="./js/mobile-menu.js"></script>
 
