made advantages list

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
   </head>
   <body class="global">
   <!-- <include src="./partials/header.html"></include>
-  <include src="./partials/hero.html"></include>
+  <include src="./partials/hero.html"></include> -->
 
-  <include src="./partials/products.html"></include> -->
+  <include src="./partials/products.html"></include>
 
   <include src="./partials/about.html"></include>
 
