--- a/src/index.html
+++ b/src/index.html
@@ -66,151 +66,12 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
     <script src="./js/gallary.js"></script>
-    
-    <!-- burger  -->
-
-    <script>
-      const btn = document.getElementById('menu-toggle');
-      const lines = btn.querySelectorAll('.line');
-      const cls = { open: 'open', close: 'close' };
-      let btnClass = cls.open;
-
-      btn.addEventListener('click', () => {
-        if (btn.classList.contains(cls.open)) {
-          btn.classList.remove(btnClass);
-          btnClass = cls.close;
-        } else if (btn.classList.contains(cls.close)) {
-          btn.classList.remove(btnClass);
-          btnClass = cls.open;
-        }
-
-        void btn.offsetWidth;
-        btn.classList.add(btnClass);
-      });
-    </script>
-
-    <!-- Mobile menu  -->
-    <script>
-      (() => {
-        const menuBtnRef = document.querySelector('[data-menu-button]');
-        const mobileMenuRef = document.querySelector('[data-menu]');
-
-        menuBtnRef.addEventListener('click', () => {
-          const expanded =
-            menuBtnRef.getAttribute('aria-expanded') === 'true' || false;
-
-          menuBtnRef.classList.toggle('is-open');
-          menuBtnRef.setAttribute('aria-expanded', !expanded);
-
-          mobileMenuRef.classList.toggle('is-open');
-        });
-      })();
-    </script>
-
-    <script>
-      const btnmn = document.getElementById('menu-toggle');
-      const line = btnmn.querySelectorAll('.line');
-      const cl = { open: 'open', close: 'close' };
-      let btnClasses = cl.open;
-
-      btnmn.addEventListener('click', () => {
-        if (btnmn.classList.contains(cl.open)) {
-          btnmn.classList.remove(btnClasses);
-          btnClasses = cl.close;
-        } else if (btnmn.classList.contains(cl.close)) {
-          btnmn.classList.remove(btnClasses);
-          btnClasses = cl.open;
-        }
-
-        void btnmn.offsetWidth;
-        btnmn.classList.add(btnClasses);
-      });
-    </script>
-    <script>
-      (() => {
-        const refs = {
-          openModalBtn: document.querySelector('[data-modal-open]'),
-          closeModalBtn: document.querySelector('[data-modal-close]'),
-          modal: document.querySelector('[data-modal]'),
-        };
-
-        refs.openModalBtn.addEventListener('click', toggleModal);
-        refs.closeModalBtn.addEventListener('click', toggleModal);
-
-        function toggleModal() {
-          refs.modal.classList.toggle('is-hidden');
-        }
-      })();
-    </script>
-      <script>(() => {
-      const refs = {
-        openModalBtn: document.querySelector('[data-about-modal-open]'),
-        closeModalBtn: document.querySelector('[data-about-modal-close]'),
-        modal: document.querySelector('[data-about-modal]'),
-      };
-
-      refs.openModalBtn.addEventListener('click', toggleModal);
-      refs.closeModalBtn.addEventListener('click', toggleModal);
-
-      function toggleModal() {
-        refs.modal.classList.toggle('is-hidden');
-      }
-  })();
-    </script>
-       <!--Modal-product script-->
-    <script>(() => {
-        const refs = {
-          openModalBtn: document.querySelector('[data-modal-ice-cream-open]'),
-          closeModalBtn: document.querySelector('[data-modal-ice-cream-close]'),
-          modal: document.querySelector('[data-modal-ice-cream]'),
-        };
-
-        refs.openModalBtn.addEventListener('click', toggleModal);
-        refs.closeModalBtn.addEventListener('click', toggleModal);
-
-        function toggleModal() {
-          refs.modal.classList.toggle('is-hidden');
-        }
-
-      })();
-    </script>
-    <script>(() => {
-        const refs = {
-          openModalBtn: document.querySelector('[data-modal-ice-coffee-open]'),
-          closeModalBtn: document.querySelector('[data-modal-ice-coffee-close]'),
-          modal: document.querySelector('[data-modal-ice-coffee]'),
-        };
-
-        refs.openModalBtn.addEventListener('click', toggleModal);
-        refs.closeModalBtn.addEventListener('click', toggleModal);
-
-        function toggleModal() {
-          refs.modal.classList.toggle('is-hidden');
-        }
-
-      })();
-    </script>
-    <script>(() => {
-        const refs = {
-          openModalBtn: document.querySelector('[data-modal-milkshakes-open]'),
-          closeModalBtn: document.querySelector('[data-modal-milkshakes-close]'),
-          modal: document.querySelector('[data-modal-milkshakes]'),
-        };
-
-        refs.openModalBtn.addEventListener('click', toggleModal);
-        refs.closeModalBtn.addEventListener('click', toggleModal);
-
-        function toggleModal() {
-          refs.modal.classList.toggle('is-hidden');
-        }
-
-      })();
-    </script>
-    </body>
-  </html>
-</body>
+    <script src="./js/burger.js"></script>
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/about-modal.js"></script>
+    <script src="./js/products-modal.js"></script>
+  </body>
 </html>
