--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ice cream</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-  </head>
-  <body>
-    <!-- Hero and header section -->
-    <include src="./partials/header-hero.html"></include>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ice cream</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
 
-    <!-- Hero section -->
-    <include src="./partials/hero.html"></include>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
 
-    <!-- Products section -->
-    <include src="./partials/products.html"></include>
+<body>
+  <!-- Hero and header section -->
+  <include src="./partials/header-hero.html"></include>
 
-    <!-- About section -->
-    <include src="./partials/about.html"></include>
+  <!-- Hero section -->
+  <include src="./partials/hero.html"></include>
 
-    <!-- Advantages section -->
-    <include src="./partials/advantages.html"></include>
+  <!-- Products section -->
+  <include src="./partials/products.html"></include>
 
-    <!-- Gallery section -->
-    <include src="./partials/gallery.html"></include>
+  <!-- About section -->
+  <include src="./partials/about.html"></include>
 
-    <!-- Customer review section -->
-    <include src="./partials/customer-reviews.html"></include>
+  <!-- Advantages section -->
+  <include src="./partials/advantages.html"></include>
 
-    <!-- Contacts section -->
-    <include src="./partials/contacts.html"></include>
+  <!-- Gallery section -->
+  <include src="./partials/gallery.html"></include>
 
-    <!-- Footer section -->
-    <include src="./partials/footer.html"></include>
+  <!-- Customer review section -->
+  <include src="./partials/customer-reviews.html"></include>
 
-    <!-- Mobile menu -->
-    <include src="./partials/mobile-menu.html"></include>
+  <!-- Contacts section -->
+  <include src="./partials/contacts.html"></include>
 
-    <!-- Modal about section -->
-    <include src="./partials/modal-about.html"></include>
+  <!-- Footer section -->
+  <include src="./partials/footer.html"></include>
 
-    <!-- Modal franchise  -->
-    <include src="./partials/modal-franchise.html"></include>
+  <!-- Mobile menu -->
+  <include src="./partials/mobile-menu.html"></include>
 
-    <!-- Modal map -->
-    <include src="./partials/modal-map.html"></include>
+  <!-- Modal about section -->
+  <include src="./partials/modal-about.html"></include>
 
-    <!-- Modal product -->
-    <include src="./partials/modal-product.html"></include>
+  <!-- Modal franchise  -->
+  <include src="./partials/modal-franchise.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
-    <script src="./js/gallary.js"></script>
-    <script src="./js/burger.js"></script>
-    <script src="./js/mobile-menu.js"></script>
-    <script src="./js/about-modal.js"></script>
-    <script src="./js/products-modal.js"></script>
-  </body>
+  <!-- Modal map -->
+  <include src="./partials/modal-map.html"></include>
+
+  <!-- Modal product -->
+  <include src="./partials/modal-product.html"></include>
+
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+  <script src="./js/gallary.js"></script>
+  <script src="./js/burger.js"></script>
+  <script src="./js/mobile-menu.js"></script>
+  <script src="./js/about-modal.js"></script>
+  <script src="./js/products-modal.js"></script>
+</body>
+
 </html>
